--- a/server/package.json
+++ b/server/package.json
@@ -3,24 +3,19 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon app.mjs"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
-  "type": "module",
   "dependencies": {
-    "@supabase/supabase-js": "^2.44.3",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
-    "nodemon": "^3.1.4",
-    "params": "^0.1.1",
-    "pg": "^8.12.0",
-    "uuid": "^10.0.0"
+    "nodemon": "^3.1.4"
   }
 }
