--- a/client/package.json
+++ b/client/package.json
@@ -14,13 +14,15 @@
     "@emotion/styled": "^11.13.0",
     "@mui/material": "^5.16.5",
     "@react-spring/web": "^9.7.3",
+    "@stripe/stripe-js": "^4.1.0",
     "@supabase/supabase-js": "^2.44.3",
     "axios": "^1.7.2",
     "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.24.1",
-    "react-tinder-card": "^1.6.4"
+    "react-tinder-card": "^1.6.4",
+    "retry-stripe-loader": "^0.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
