--- a/server/package.json
+++ b/server/package.json
@@ -14,7 +14,7 @@
     "@supabase/supabase-js": "^2.44.3",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
-    "cloudinary": "^2.2.0",
+    "cloudinary": "^2.4.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
@@ -26,6 +26,7 @@
     "params": "^0.1.1",
     "path": "^0.12.7",
     "pg": "^8.12.0",
+    "stripe": "^16.5.0",
     "uuid": "^10.0.0",
     "uuidv4": "^6.2.13"
   }
